--- a/Shot_Classification.ipynb
+++ b/Shot_Classification.ipynb
@@ -50,40 +50,341 @@
       ],
       "metadata": {
         "id": "zY0TQEjMINEs",
-        "outputId": "7ecd363e-4423-413b-b735-ea7e21d7187f",
+        "outputId": "97673bb0-b810-47d5-fc18-e736e61b483b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "zY0TQEjMINEs",
-      "execution_count": 2,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
             "/content/drive/MyDrive/University/Deep/Tennis-Shot-Recognition\n",
             "remote: Enumerating objects: 5, done.\u001b[K\n",
             "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
             "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
             "remote: Total 4 (delta 2), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (4/4), 498 bytes | 27.00 KiB/s, done.\n",
+            "Receiving objects: 100% (4/4), 502 bytes | 15.00 KiB/s, done.\n",
             "Resolving deltas: 100% (2/2), completed with 1 local object.\n",
             "From https://github.com/Svanzi/Tennis-Shot-Recognition\n",
-            "   e834648..24a8060  main       -> origin/main\n",
-            "Updating e834648..24a8060\n",
+            "   24a8060..3151566  main       -> origin/main\n",
+            "Updating 24a8060..3151566\n",
             "Fast-forward\n",
             "remote: Enumerating objects: 1, done.\u001b[K\n",
             "remote: Counting objects: 100% (1/1), done.\u001b[K\n",
             "remote: Total 1 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (1/1), 23.70 KiB | 836.00 KiB/s, done.\n",
-            " Shot_Classification.ipynb | 652 \u001b[32m+++++++++++++++++++++++++++++++++++++++++++\u001b[m\u001b[31m---\u001b[m\n",
-            " 1 file changed, 623 insertions(+), 29 deletions(-)\n",
+            "Receiving objects: 100% (1/1), 58.02 KiB | 2.32 MiB/s, done.\n",
+            " Shot_Classification.ipynb | 727 \u001b[32m+++++++++++++++++++++\u001b[m\u001b[31m-------------------------\u001b[m\n",
+            " 1 file changed, 325 insertions(+), 402 deletions(-)\n",
             "DATA_DIR = /content/drive/MyDrive/University/Deep/Tennis-Shot-Recognition/DataSet\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "DATA_DIR = Path(\"/content/drive/MyDrive/University/Deep/Tennis-Shot-Recognition/DataSet\")\n",
+        "players = sorted([p for p in DATA_DIR.iterdir() if p.is_dir()])\n",
+        "\n",
+        "X=[]\n",
+        "Y=[]\n",
+        "X_test=[]\n",
+        "y_test=[]\n",
+        "\n",
+        "first = True\n",
+        "feature_cols = None\n",
+        "\n",
+        "for player in tqdm(players, desc=\"Players\", leave=False):\n",
+        "    print(f\"\\n**** Parsing the shots of {player.name} ****\\n\")\n",
+        "    for shot_csv in sorted(player.glob(\"*.csv\")):\n",
+        "        print(shot_csv.name)\n",
+        "        data = pd.read_csv(shot_csv)\n",
+        "        if first:\n",
+        "          feature_cols = [c for c in data.columns if c!= 'shot']\n",
+        "          first = False\n",
+        "        else:\n",
+        "          assert feature_cols == [c for c in data.columns if c != 'shot'], f\"Colonne diverse in {shot_csv}\"\n"
+      ],
+      "metadata": {
+        "id": "55Z8d3-pePkd",
+        "outputId": "d8c3a86b-5cf0-46da-cb32-f45eeb70841d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "55Z8d3-pePkd",
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rPlayers:   0%|          | 0/2 [00:00<?, ?it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "**** Parsing the shots of Alcaraz ****\n",
+            "\n",
+            "backhand_001.csv\n",
+            "backhand_002.csv\n",
+            "backhand_003.csv\n",
+            "backhand_004.csv\n",
+            "backhand_005.csv\n",
+            "backhand_006.csv\n",
+            "backhand_007.csv\n",
+            "forehand_001.csv\n",
+            "forehand_002.csv\n",
+            "forehand_003.csv\n",
+            "forehand_004.csv\n",
+            "forehand_005.csv\n",
+            "forehand_006.csv\n",
+            "forehand_007.csv\n",
+            "forehand_008.csv\n",
+            "forehand_009.csv\n",
+            "forehand_010.csv\n",
+            "forehand_011.csv\n",
+            "forehand_012.csv\n",
+            "forehand_013.csv\n",
+            "forehand_014.csv\n",
+            "forehand_015.csv\n",
+            "forehand_016.csv\n",
+            "forehand_017.csv\n",
+            "forehand_018.csv\n",
+            "forehand_019.csv\n",
+            "forehand_020.csv\n",
+            "forehand_021.csv\n",
+            "forehand_022.csv\n",
+            "forehand_023.csv\n",
+            "forehand_024.csv\n",
+            "forehand_025.csv\n",
+            "forehand_026.csv\n",
+            "forehand_027.csv\n",
+            "forehand_028.csv\n",
+            "forehand_029.csv\n",
+            "forehand_030.csv\n",
+            "neutral_001.csv\n",
+            "neutral_002.csv\n",
+            "neutral_003.csv\n",
+            "neutral_004.csv\n",
+            "neutral_005.csv\n",
+            "neutral_006.csv\n",
+            "neutral_007.csv\n",
+            "neutral_008.csv\n",
+            "neutral_009.csv\n",
+            "neutral_010.csv\n",
+            "neutral_011.csv\n",
+            "neutral_012.csv\n",
+            "neutral_013.csv\n",
+            "neutral_014.csv\n",
+            "neutral_015.csv\n",
+            "neutral_016.csv\n",
+            "neutral_017.csv\n",
+            "neutral_018.csv\n",
+            "neutral_019.csv\n",
+            "neutral_020.csv\n",
+            "neutral_021.csv\n",
+            "neutral_022.csv\n",
+            "neutral_023.csv\n",
+            "neutral_024.csv\n",
+            "neutral_025.csv\n",
+            "neutral_026.csv\n",
+            "neutral_027.csv\n",
+            "neutral_028.csv\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rPlayers:  50%|█████     | 1/2 [00:00<00:00,  1.43it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "neutral_029.csv\n",
+            "neutral_030.csv\n",
+            "neutral_031.csv\n",
+            "neutral_032.csv\n",
+            "neutral_033.csv\n",
+            "neutral_034.csv\n",
+            "neutral_035.csv\n",
+            "neutral_036.csv\n",
+            "\n",
+            "**** Parsing the shots of Sinner ****\n",
+            "\n",
+            "backhand_001.csv\n",
+            "backhand_002.csv\n",
+            "backhand_003.csv\n",
+            "backhand_004.csv\n",
+            "backhand_005.csv\n",
+            "backhand_006.csv\n",
+            "backhand_007.csv\n",
+            "backhand_008.csv\n",
+            "forehand_001.csv\n",
+            "forehand_002.csv\n",
+            "forehand_003.csv\n",
+            "forehand_004.csv\n",
+            "forehand_005.csv\n",
+            "forehand_006.csv\n",
+            "forehand_007.csv\n",
+            "forehand_008.csv\n",
+            "forehand_009.csv\n",
+            "forehand_010.csv\n",
+            "forehand_011.csv\n",
+            "forehand_012.csv\n",
+            "forehand_013.csv\n",
+            "forehand_014.csv\n",
+            "forehand_015.csv\n",
+            "forehand_016.csv\n",
+            "forehand_017.csv\n",
+            "forehand_018.csv\n",
+            "forehand_019.csv\n",
+            "forehand_020.csv\n",
+            "forehand_021.csv\n",
+            "forehand_022.csv\n",
+            "forehand_023.csv\n",
+            "forehand_024.csv\n",
+            "forehand_025.csv\n",
+            "forehand_026.csv\n",
+            "neutral_001.csv\n",
+            "neutral_002.csv\n",
+            "neutral_003.csv\n",
+            "neutral_004.csv\n",
+            "neutral_005.csv\n",
+            "neutral_006.csv\n",
+            "neutral_007.csv\n",
+            "neutral_008.csv\n",
+            "neutral_009.csv\n",
+            "neutral_010.csv\n",
+            "neutral_011.csv\n",
+            "neutral_012.csv\n",
+            "neutral_013.csv\n",
+            "neutral_014.csv\n",
+            "neutral_015.csv\n",
+            "neutral_016.csv\n",
+            "neutral_017.csv\n",
+            "neutral_018.csv\n",
+            "neutral_019.csv\n",
+            "neutral_020.csv\n",
+            "neutral_021.csv\n",
+            "neutral_022.csv\n",
+            "neutral_023.csv\n",
+            "neutral_024.csv\n",
+            "neutral_025.csv\n",
+            "neutral_026.csv\n",
+            "neutral_027.csv\n",
+            "neutral_028.csv\n",
+            "neutral_029.csv\n",
+            "neutral_030.csv\n",
+            "neutral_031.csv\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "                                                      "
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "neutral_032.csv\n",
+            "neutral_033.csv\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "feature_cols"
+      ],
+      "metadata": {
+        "id": "w6j0PJPig3xm",
+        "outputId": "0c5c4f22-3b28-43f8-ca36-4e9bcbb03cd3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "w6j0PJPig3xm",
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['left_shoulder_y',\n",
+              " 'left_shoulder_x',\n",
+              " 'right_shoulder_y',\n",
+              " 'right_shoulder_x',\n",
+              " 'left_elbow_y',\n",
+              " 'left_elbow_x',\n",
+              " 'right_elbow_y',\n",
+              " 'right_elbow_x',\n",
+              " 'left_wrist_y',\n",
+              " 'left_wrist_x',\n",
+              " 'right_wrist_y',\n",
+              " 'right_wrist_x',\n",
+              " 'left_hip_y',\n",
+              " 'left_hip_x',\n",
+              " 'right_hip_y',\n",
+              " 'right_hip_x',\n",
+              " 'left_knee_y',\n",
+              " 'left_knee_x',\n",
+              " 'right_knee_y',\n",
+              " 'right_knee_x',\n",
+              " 'left_ankle_y',\n",
+              " 'left_ankle_x',\n",
+              " 'right_ankle_y',\n",
+              " 'right_ankle_x']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "cols = pd.Index(feature_cols)\n",
+        "\n",
+        "def idx_of(prefixes):\n",
+        "  idx = []\n",
+        "  for p in prefixes:\n",
+        "    for suff in ['_x','_y']:\n",
+        "      name = p + suff\n",
+        "      if name in cols:\n",
+        "        idx.append"
+      ],
+      "metadata": {
+        "id": "KXjFkaDAgPzC"
+      },
+      "id": "KXjFkaDAgPzC",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -505,11 +806,11 @@
         "nb_cat = len(np.unique(y_train))"
       ],
       "metadata": {
-        "id": "8lblA95JIX9R",
-        "outputId": "b0ac4dff-60e0-4211-fcad-05af33c3e6a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8lblA95JIX9R",
+        "outputId": "b0ac4dff-60e0-4211-fcad-05af33c3e6a6"
       },
       "id": "8lblA95JIX9R",
       "execution_count": 81,
@@ -564,11 +865,11 @@
         "print(list(le.classes_))"
       ],
       "metadata": {
-        "id": "sxgFMXAQJWd8",
-        "outputId": "e71d34ca-5c1b-4825-df70-dff4d02563d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sxgFMXAQJWd8",
+        "outputId": "e71d34ca-5c1b-4825-df70-dff4d02563d4"
       },
       "id": "sxgFMXAQJWd8",
       "execution_count": 83,
@@ -593,11 +894,11 @@
         "print(\"y_test Shape: \", y_test.shape)"
       ],
       "metadata": {
-        "id": "UMLJ9WR4JdeL",
-        "outputId": "787959b4-f13b-4cbf-9c94-3d4e9ed58e4e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UMLJ9WR4JdeL",
+        "outputId": "787959b4-f13b-4cbf-9c94-3d4e9ed58e4e"
       },
       "id": "UMLJ9WR4JdeL",
       "execution_count": 84,
