--- a/Shot_Classification.ipynb
+++ b/Shot_Classification.ipynb
@@ -143,11 +143,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "_S6MdA4QdzMK",
-        "outputId": "2da74372-f466-4845-a1f5-c0a1de9b0a40",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_S6MdA4QdzMK",
+        "outputId": "2da74372-f466-4845-a1f5-c0a1de9b0a40"
       },
       "id": "_S6MdA4QdzMK",
       "execution_count": 30,
@@ -394,12 +394,12 @@
         "display(print(X_parts['right_leg'].shape))"
       ],
       "metadata": {
-        "id": "Fpsd2YmMi0tC",
-        "outputId": "b57705ce-c4c3-4bae-8385-2fab7db73bd2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 191
-        }
+        },
+        "id": "Fpsd2YmMi0tC",
+        "outputId": "b57705ce-c4c3-4bae-8385-2fab7db73bd2"
       },
       "id": "Fpsd2YmMi0tC",
       "execution_count": 33,
@@ -1063,6 +1063,39 @@
     {
       "cell_type": "code",
       "source": [
+        "def brnn_tanh(units, name, rnn_type=\"simple\", dropout=0.0, return_sequences=True):\n",
+        "  if rnn_type == \"simple\":\n",
+        "    rnn = layers.SimpleRNN(units, activation='tanh', return_sequences=return_sequences, dropout=dropout)\n",
+        "\n",
+        "  elif rnn_type == \"gru\":\n",
+        "    rnn = layers.GRU(units, activation='tanh', return_sequences=return_sequences, dropout=dropout)\n",
+        "\n",
+        "  return layers.Bidirectional(rnn, name=name)"
+      ],
+      "metadata": {
+        "id": "B32xJh-d5sJk"
+      },
+      "id": "B32xJh-d5sJk",
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def  bidirectional_lstm(units, name, dropout=0.0, return_sequences=False):\n",
+        "  lstm = layers.LSTM(units, return_sequences=return_sequences, dropout=dropout)\n",
+        "  return layers.Bidirectional(lstm, name=name)"
+      ],
+      "metadata": {
+        "id": "7WQIyY-K77D1"
+      },
+      "id": "7WQIyY-K77D1",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def create_network(\n",
         "    T=30,\n",
         "    shape_left_arm=6,\n",
@@ -1076,13 +1109,17 @@
         "    dropout=0.1\n",
         "):\n",
         "\n",
-        "  # ---- Inputs ----\n",
+        "  # ==== Inputs ====\n",
         "\n",
-        "  left_arm  = Input(shape=(T, shape_left_arm),  name = \"left_arm\")\n",
-        "  right_arm = Input(shape=(T, shape_right_arm), name = \"right_arm\")\n",
-        "  left_leg  = Input(shape=(T, shape_left_leg),  name = \"left_leg\")\n",
-        "  right_leg = Input(shape=(T, shape_right_leg), name = \"right_leg\")\n",
-        "  trunk     = Input(shape=(T, shape_trunk),     name = \"trunk\")"
+        "  in_left_arm  = Input(shape=(T, shape_left_arm),  name = \"left_arm\")\n",
+        "  in_right_arm = Input(shape=(T, shape_right_arm), name = \"right_arm\")\n",
+        "  in_left_leg  = Input(shape=(T, shape_left_leg),  name = \"left_leg\")\n",
+        "  in_right_leg = Input(shape=(T, shape_right_leg), name = \"right_leg\")\n",
+        "  in_trunk     = Input(shape=(T, shape_trunk),     name = \"trunk\")\n",
+        "\n",
+        "  # ==== bl1 layer ====\n",
+        "\n",
+        "  bl1_left_arm ="
       ],
       "metadata": {
         "id": "y0Sl1tdPu1iL"
