--- a/Shot_Classification.ipynb
+++ b/Shot_Classification.ipynb
@@ -1106,6 +1106,7 @@
         "    n_classes=3,\n",
         "    brnn_units=(64, 96, 128),\n",
         "    lstm_units=256,\n",
+        "    rnn_type=\"simple\",\n",
         "    dropout=0.1\n",
         "):\n",
         "\n",
@@ -1119,12 +1120,74 @@
         "\n",
         "  # ==== bl1 layer ====\n",
         "\n",
-        "  bl1_left_arm ="
+        "  bl1_left_arm  =  brnn_tanh(brnn_units[0], \"bl1_left_arm\",   rnn_type, dropout)  (in_left_arm)\n",
+        "  bl1_right_arm =  brnn_tanh(brnn_units[0], \"bl1_right_arm\",  rnn_type, dropout)  (in_right_arm)\n",
+        "  bl1_trunk     =  brnn_tanh(brnn_units[0], \"bl1_trunk\",      rnn_type, dropout)  (in_trunk)\n",
+        "  bl1_left_leg  =  brnn_tanh(brnn_units[0], \"bl1_left_leg\",   rnn_type, dropout)  (in_left_leg)\n",
+        "  bl1_right_leg =  brnn_tanh(brnn_units[0], \"bl1_right_leg\",  rnn_type, dropout)  (in_right_leg)\n",
+        "\n",
+        "  # ==== fl1 layer ====\n",
+        "\n",
+        "  fl1_leftArm_trunk   = layers.concatenate(name=\"fl1_leftArm_trunk\")  ([bl1_left_arm,   bl1_trunk])\n",
+        "  fl1_rightArm_trunk  = layers.concatenate(name=\"fl1_rightArm_trunk\") ([bl1_right_arm,  bl1_trunk])\n",
+        "  fl1_leftLeg_trunk   = layers.concatenate(name=\"fl1_lafetLeg_trunk\") ([bl1_left_leg,   bl1_trunk])\n",
+        "  fl1_rightLeg_trunk  = layers.concatenate(name=\"fl1_rightLeg_trunk\") ([bl1_right_leg,  bl1_trunk])\n",
+        "\n",
+        "  # ==== bl2 layer ====\n",
+        "\n",
+        "  bl2_leftArm_trunk   = brnn_tanh(brnn_units[1], \"bl2_leftArm_trunk\",   rnn_type, dropout)  (fl1_leftArm_trunk)\n",
+        "  bl2_rightArm_trunk  = brnn_tanh(brnn_units[1], \"bl2_rightArm_trunk\",  rnn_type, dropout)  (fl1_rightArm_trunk)\n",
+        "  bl2_leftLeg_trunk   = brnn_tanh(brnn_units[1], \"bl2_leftLeg_trunk\",   rnn_type, dropout)  (fl1_leftLeg_trunk)\n",
+        "  bl2_rightLeg_trunk  = brnn_tanh(brnn_units[1], \"bl2_rightLeg_trunk\",  rnn_type, dropout)  (fl1_rightLeg_trunk)\n",
+        "\n",
+        "  # ==== fl2 layer ====\n",
+        "\n",
+        "  fl2_upperBody = layers.concatenate(name=\"fl2_upperBody\")  ([bl2_leftArm_trunk,  bl2_rightArm_trunk])\n",
+        "  fl2_lowerBody = layers.concatenate(name=\"fl2_lowerBody\")  ([bl2_leftLeg_trunk,  bl2_rightLeg_trunk])\n",
+        "\n",
+        "  # ==== bl3 layer ====\n",
+        "\n",
+        "  bl3_upperBody = brnn_tanh(brnn_units[2], \"bl3_upperBody\", rnn_type, dropout)  (fl2_upperBody)\n",
+        "  bl3_lowerBody = brnn_tanh(brnn_units[2], \"bl3_lowerBody\", rnn_type, dropout)  (fl2_lowerBody)\n",
+        "\n",
+        "  # ==== fl3 layer ====\n",
+        "\n",
+        "  fl3_wholeBody = layers.concatnate(name=\"fl3_wholeBody\") ([bl3_upperBody, bl3_lowerBody])\n",
+        "\n",
+        "  # ==== bl4 layer ====\n",
+        "\n",
+        "  bl4 = bidirectional_lstm(lstm_units, \"bl4\", dropout, return_sequences=False) (fl3_wholeBody)\n",
+        "\n",
+        "  # ==== fully connected layer ====\n",
+        "\n",
+        "  fc = layers.Dense(256, activation='relu', name=\"fc\")(bl4)\n",
+        "  fc = layers.Dropout(0.3)(fc)\n",
+        "\n",
+        "  # ==== softmax layer ====\n",
+        "\n",
+        "  sl = layers.Dense(n_classes, acitvation=\"softmax\", name=\"sl\")(fc)\n",
+        "\n",
+        "  model = models.Model(\n",
+        "      inputs=[in_left_arm, in_right_arm, in_trunk, in_left_leg, in_right_leg],\n",
+        "      outputs= sl,\n",
+        "      )\n",
+        "\n",
+        "  return model"
       ],
       "metadata": {
         "id": "y0Sl1tdPu1iL"
       },
       "id": "y0Sl1tdPu1iL",
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "WeDJAYvOD7H-"
+      },
+      "id": "WeDJAYvOD7H-",
       "execution_count": null,
       "outputs": []
     }
